[package]
name = "sticks"
authors = ["TVC"]
description = "A tool for managing C and C++ projects"
license = "MIT"
version = "0.1.8"
edition = "2021"
readme = "README.md"
repository = "https://github.com/mAmineChniti/sticks"
documentation = "https://github.com/mAmineChniti/sticks/blob/master/README.md"

[dependencies]
clap = "2.33"

[[bin]]
name="sticks"
path="src/main.rs"

[package.metadata.deb]
name = "sticks"
maintainer = "TVC"
copyright = "TVC"
depends = "$auto"
section = "utility"
priority = "optional"